--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,23 @@
 plugins {
     id 'java'
-    id 'me.champeau.jmh' version '0.7.3'
 }
 
 group = 'com.github.coding_paradigm'
 version = '1.0.0'
+
+sourceSets {
+    jmh
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    jmhImplementation 'org.openjdk.jmh:jmh-core:1.37'
+    jmhImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
+    jmhImplementation 'org.openjdk.jmh:jmh-generator-bytecode:1.37'
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
