Fix some issues + Helper class

--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ repositories {
 
 dependencies {
     jmhImplementation 'org.openjdk.jmh:jmh-core:1.37'
-    jmhImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
     jmhImplementation 'org.openjdk.jmh:jmh-generator-bytecode:1.37'
+    jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
